# terminal-data-talk

./: .gitignore  Justfile  README.md  dashboard.py  main.py  presentation.py  pyproject.toml
clippt/: __init__.py  app.py  defaults.py  slides.py  theming.py  utils.py
data/: countries.csv
dynamic_slides/: __init__.py  dashboard.py
slides/: 000-title.md  001-prompt.md  001-prompt2.md  001-prompt3.md  004-why.md  010-problems.md  100-tabular.md  110-tabular.py  120-task-sort.md  120-xan.md  121-countries_by_population.py  121-sorted_countries_pandas.py  130-visidata.md  140-rich.md  141-rich.py  142-rich_countries.py  143-polars_cities.py  143-rich_cities.py  150-data-viewer.py  400-dashboards.md  999-end.md  __init__.py  colours.md  colours1.py  colours256.py  data_table.py  data_viewer.py  kitty.py  libraries.md  plotext.md  plotext_hist.py  plotext_line.py  plotille_hist.py  plotille_line.py  plottile.md  simple_bar.py  simple_bar_colours.py  simple_bar_unicode.py  simple_bar_unicode2.py  simple_scatter.py  (+6 more)
